--- a/business-analyst.ipynb
+++ b/business-analyst.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "<Figure size 500x500 with 0 Axes>"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "4  https://hk.jobsdb.com/job/76895248  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "max                       8.000000  7.693666e+07"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
        "4  https://hk.jobsdb.com/job/76895248  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1216,7 @@
        "4        Hong Kong  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1464,7 @@
        "4        Hong Kong           0           0  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1475,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1680,7 @@
        "4         1     0           0           0  "
       ]
      },
-     "execution_count": 124,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1698,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -1720,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -1762,7 +1762,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.1.undefined"
   }
  },
  "nbformat": 4,
