brushed up analysis.ipynb

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,24 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.pyplot import figure\n",
     "import seaborn as sns\n",
-    "import copy"
+    "import copy\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define constants\n",
+    "INPUT_PATH = \"./jobs/\"\n",
+    "OUTPUT_PATH = \"./analyses/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +39,7 @@
        "<Figure size 500x500 with 0 Axes>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -50,18 +62,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import the csv from the job scraping program\n",
-    "job_title = \"business-analyst\"\n",
-    "df = pd.read_csv(f\"./jobs/{job_title}.csv\")"
+    "\n",
+    "# Change the name of the variable below to the name of file that you want analyzed\n",
+    "csv_file = \"business-analyst\"\n",
+    "df = pd.read_csv(f\"{INPUT_PATH}{csv_file}.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +218,7 @@
        "4  2024-07-17 14:00:00  77345435  https://hk.jobsdb.com/job/77345435  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +248,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +345,7 @@
        "max                       8.000000  7.735379e+07"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +545,7 @@
        "4  2024-07-17 14:00:00  77345435  https://hk.jobsdb.com/job/77345435  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +921,7 @@
        "4        Sheung Wan  Central and Western        Hong Kong  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1176,7 @@
        "4           0  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1219,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1392,7 @@
        "4                 19         0     0           0           0  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1396,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1418,22 +1432,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
       "saved\n"
      ]
     }
    ],
    "source": [
-    "df.to_csv(\"./ba-analysis.csv\", index=False)\n",
-    "print(\"\\n\\nsaved\")"
+    "# (Optional) Export the cleansed data to a csv\n",
+    "Path(OUTPUT_PATH).mkdir(parents=True, exist_ok=True)\n",
+    "df.to_csv(f\"{OUTPUT_PATH}{csv_file}_transformed.csv\", index=False)\n",
+    "print(\"saved\")"
    ]
   },
   {
