added column info table

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -44,7 +44,22 @@
    "source": [
     "# The Dataset\n",
     "\n",
-    "The dataset is from a job-scraping program written by me that scrapes a user-defined number of jobs from the search result of a partcular keyword on JobsDB.com Hong Kong. The end result of the scraping program is a csv file containing the relevant details of each keyword-matching job stored in rows (e.g., Title, Company, Salary, Location, Posted Date, etc.), which can be imported into this Notebook to perform further analysis below. Some degrees of data cleaning have already been done (e.g., removing duplicate records) in the scraping program to make data cleaning below easier and faster."
+    "The dataset is from a job-scraping program written by me that scrapes a user-defined number of jobs from the search result of a partcular keyword on JobsDB.com Hong Kong. The end result of the scraping program is a csv file containing the relevant details of each keyword-matching job stored in rows (e.g., Title, Company, Salary, Location, Posted Date, etc.), which can be imported into this Notebook to perform further analysis below. Some degrees of data cleaning have already been done (e.g., removing duplicate records) in the scraping program to make data cleaning below easier and faster.\n",
+    "\n",
+    "The columns:\n",
+    "\n",
+    "| Column                      | null Example | non-null Example                       |\n",
+    "|-----------------------------|--------------|----------------------------------------|\n",
+    "| Title                       | -            | Business Analyst                       |\n",
+    "| Company                     | -            | Jobsdb - SmartHire                     |\n",
+    "| Min. Years of Exp. Required | (empty)      | 1                                      |\n",
+    "| Fresh Grad/Less Exp.        | -            | True                                   |\n",
+    "| Location                    | -            | Airport Area, Islands District         |\n",
+    "| Classification              | -            | Information & Communication Technology |\n",
+    "| Salary                      | (empty)      | $25,000 - $34,000 per month            |\n",
+    "| Posted Date                 | -            | 2024-07-17 14:00                       |\n",
+    "| Job ID                      | -            | 77344899                               |\n",
+    "| URL                         | -            | https://hk.jobsdb.com/job/77344899     |"
    ]
   },
   {
