escaped '$' character in markdown

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -17,14 +17,14 @@
     "\n",
     "As of July 18, 2024 (date of scraping),\n",
     "\n",
-    "- Only 210 out of a total of 1152 (18%) jobs provided salary information. Out of the postings that provided salary info, the salary ranges from HKD$40 (likely a typo from the job poster) to $800,000 per month\n",
-    "- Regardless of years of experience (yoe), the \"Information & Communication Technology\" classification pays the most across all classifications with an average of HKD$76,637 minimum, followed by \"Science & Technology\" with HKD$16,750 and \"Trades & Services\" with HKD$12,500.\n",
-    "- Regardless of yoe, the Central and Western district is one that pays the most across all districts with an average of HKD$15,640 minimum, followed by the Hong Kong Islands district with HKD$11,612, and the Tuen Mun district with HKD$8,750.\n",
+    "- Only 210 out of a total of 1152 (18%) jobs provided salary information. Out of the postings that provided salary info, the salary ranges from HKD\\$40 (likely a typo from the job poster) to \\$800,000 per month\n",
+    "- Regardless of years of experience (yoe), the \"Information & Communication Technology\" classification pays the most across all classifications with an average of HKD\\$76,637 minimum, followed by \"Science & Technology\" with HKD\\$16,750 and \"Trades & Services\" with HKD\\$12,500.\n",
+    "- Regardless of yoe, the Central and Western district is one that pays the most across all districts with an average of HKD\\$15,640 minimum, followed by the Hong Kong Islands district with HKD\\$11,612, and the Tuen Mun district with HKD\\$8,750.\n",
     "- The district with the most job opportunities available is Central and Western with 220 postings, followed by Kwun Tong with 179 postings, Eastern with 115 postings, Yau Tsim Mong with 97 postings, and Wan Chai with 86 postings.\n",
     "- There are 482 junior-level (0-2 yoe or accepts fresh graduates) postings (42%), 249 mid-level (3-4 yoe) postings (22%), and 275 senior-level (5 or more yoe) postings (24%).\n",
     "- The most demanded minimum yoe required is 3 years (mid-level) with 193 postings (17%), followed by 5 years (senior-level) with 183 postings (16%), and 2 years (junior level) with 168 postings (15%).\n",
     "- There are 291 postings (25%) hiring for multiple positions. Out of those postings, at least 124 of them (43% of the 289 postings, or 11% of the total number of postings) are hiring for multiple positions across different career levels (e.g., while one posting is looking for a \"Senior Business Analyst (Digital / Mobile Projects)\", this company is also accepting candidates with less experience to take on a more junior level of similar/the same role [as stated in one of the job requirements])\n",
-    "- Due to some postings hiring for positions across different career levels, those postings requiring a minimum of 7 yoe actually report the lowest average minimum salary of HKD$28,500 compared to those requiring 1 yoe with an average of HKD$32,333, followed by those requiring 9 yoe with an average of HKD$33,000. Conversely, those requiring 4 yoe report a highest average minimum salary of HKD$69,809, followed by those requiring 8 yoe with an average of HKD$61,444, and those requiring 3 yoe with an average of HKD$53,461."
+    "- Due to some postings hiring for positions across different career levels, those postings requiring a minimum of 7 yoe actually report the lowest average minimum salary of HKD\\$28,500 compared to those requiring 1 yoe with an average of HKD\\$32,333, followed by those requiring 9 yoe with an average of HKD\\$33,000. Conversely, those requiring 4 yoe report a highest average minimum salary of HKD\\$69,809, followed by those requiring 8 yoe with an average of HKD\\$61,444, and those requiring 3 yoe with an average of HKD\\$53,461."
    ]
   },
   {
@@ -34,7 +34,7 @@
     "# Discussion\n",
     "\n",
     "- Salary transparency is extremely lacking\n",
-    "- Even for those postings that included salary info, some of them are hiring for multiple positions across different career levels, especially the ones hiring for more senior-level positions. This makes the \"Min. Years of Exp. Required\" field for those postings largely inaccurate and produces huge ranges in \"Min Salary\" and \"Max Salary\" (e.g., $500,000 to $800,000). Without referring to other job searching platforms (e.g., Linkedin, Glassdoor, Payscale), the above factors ultimately make uncovering insights on the relationship between salary and other potentially related factors (e.g., yoe) difficult\n",
+    "- Even for those postings that included salary info, some of them are hiring for multiple positions across different career levels, especially the ones hiring for more senior-level positions. This makes the \"Min. Years of Exp. Required\" field for those postings largely inaccurate and produces huge ranges in \"Min Salary\" and \"Max Salary\" (e.g., \\$500,000 to \\$800,000). Without referring to other job searching platforms (e.g., Linkedin, Glassdoor, Payscale), the above factors ultimately make uncovering insights on the relationship between salary and other potentially related factors (e.g., yoe) difficult\n",
     "- The source data csv included both technical and non-technical business analyst (BA) jobs. The requirements of technical skills in technical BA roles might be a lot demanding than non-technical ones."
    ]
   },
@@ -56,7 +56,7 @@
     "| Fresh Grad/Less Exp.        | -            | True                                   |\n",
     "| Location                    | -            | Airport Area, Islands District         |\n",
     "| Classification              | -            | Information & Communication Technology |\n",
-    "| Salary                      | (empty)      | $25,000 - $34,000 per month            |\n",
+    "| Salary                      | (empty)      | \\$25,000 - \\$34,000 per month            |\n",
     "| Posted Date                 | -            | 2024-07-17 14:00                       |\n",
     "| Job ID                      | -            | 77344899                               |\n",
     "| URL                         | -            | https://hk.jobsdb.com/job/77344899     |"
