fixed minor typo

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -3024,7 +3024,7 @@
     "\n",
     "We can find out by looking at:\n",
     "\n",
-    "1. the mean (calculated without outliners) of \"Min Salary\" against yoe \n",
+    "1. a plot with the mean (calculated without outliners) of \"Min Salary\" against yoe \n",
     "2. the distribution of \"Min Salary\" (and see its skewness)"
    ]
   },
